k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skymechanics
  labels:
    name: skymechanics
    memory-optimized: "true"
